compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_bind_decl_normal.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "begin\nvar me : int\nbind us to me\nend"
---
"me"@"src/main.t:10..12" [ConstVar(Var, No)]: int
"us"@"src/main.t:24..26" [Binding(Const, No)]: int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
