compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_bind_decl_require_mut.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "begin\nconst me : int := 0\nbind var us to me\nend"
---
"me"@"src/main.t:12..14" [ConstVar(Const, No)]: int
"us"@"src/main.t:35..37" [Binding(Var, No)]: int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:31..43: cannot bind `us` to `me`
| error for src/main.t:41..43: `me` is a reference to a constant, not a variable
| note for src/main.t:12..14: `me` declared here
