compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_case_alias_selector_ty.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type c : char\nconst k : c := 'c'\ncase 'k' of label k: end case\n"
---
"c"@"src/main.t:5..6" [Type]: alias[DefId(PackageId(3072), LocalDefId(0))] of char
"k"@"src/main.t:20..21" [ConstVar(Const, No)]: alias[DefId(PackageId(3072), LocalDefId(0))] of char
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
