compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_case_non_comptime_selector_expr.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var k : int\ncase 1 of label k + 1: end case\n"
---
"k"@"src/main.t:4..5" [ConstVar(Var, No)]: int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:28..29: cannot compute `k` at compile-time
| error for src/main.t:28..29: `k` is a reference to a variable, not a constant
| note for src/main.t:4..5: `k` declared here
