compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_case_wrong_coerced_discrim_select_ty.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "case 'c' of label \"cc\", \"\": end case"
---
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 18..22): mismatched types
| note for (FileId(1), 18..22): this is of type `string`, of length 2
| note for (FileId(1), 5..8): discriminant is of type `char`
| info: `char` only allows `char` or `string`s of length 1
error at (FileId(1), 24..26): mismatched types
| note for (FileId(1), 24..26): this is of type `string`, of length 0
| note for (FileId(1), 5..8): discriminant is of type `char`
| info: `char` only allows `char` or `string`s of length 1
