compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_case_wrong_discriminant_ty.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "case 1.0 of label 1.0: end case\ncase 'aa' of label 'aa': end case\n"
---
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:5..8: mismatched types
| error for src/main.t:5..8: `real` cannot be used as a case discriminant
| info: `case` discriminant must be either an index type (an integer, `boolean`, `char`, enumerated type, or a range), or a `string`
error at src/main.t:37..41: mismatched types
| error for src/main.t:37..41: `char(2)` cannot be used as a case discriminant
| info: `case` discriminant must be either an index type (an integer, `boolean`, `char`, enumerated type, or a range), or a `string`
