compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_case_wrong_mismatch_discrim_select_ty.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "case 1.0 of label 1, 'd', false end case"
---
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:5..8: mismatched types
| error for src/main.t:5..8: `real` cannot be used as a case discriminant
| info: `case` discriminant must be either an index type (an integer, `boolean`, `char`, enumerated type, or a range), or a `string`
error at src/main.t:21..24: mismatched types
| note for src/main.t:5..8: discriminant is of type `real`
| note for src/main.t:21..24: selector is of type `char`
| error for src/main.t:21..24: `char` is not a `real`
| info: selector type must match discriminant type
error at src/main.t:26..31: mismatched types
| note for src/main.t:5..8: discriminant is of type `real`
| note for src/main.t:26..31: selector is of type `boolean`
| error for src/main.t:26..31: `boolean` is not a `real`
| info: selector type must match discriminant type
