compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_case_wrong_value_discriminant.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type c : char\ncase c of label : end case\n"
---
"c"@"src/main.t:5..6" [Type]: alias[DefId(PackageId(3072), LocalDefId(0))] of char
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:19..20: cannot use `c` as an expression
| error for src/main.t:19..20: `c` is a reference to a type, not a variable
| note for src/main.t:5..6: `c` declared here
