compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_case_wrong_value_selectors.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type c : char\ncase 'k' of label c: end case\n"
---
"c"@(FileId(1), 5..6) [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of char
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 32..33): cannot use `c` as an expression
| error for (FileId(1), 32..33): `c` is a reference to a type, not a variable
| note for (FileId(1), 5..6): `c` declared here
