compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_charn_ty_runtime_size.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var k : int type _ : char(k)"
---
"k"@"src/main.t:4..5" [ConstVar(Var, No)]: int
"_"@"src/main.t:17..18" [Type]: alias[DefId(PackageId(3072), LocalDefId(1))] of char_n Fixed(Unevaluated(PackageId(3072), BodyId(0)))
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:21..28: unsupported type
| error for src/main.t:21..28: dynamically sized `char(N)` isn't supported yet
